// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`VaButton a button 3 1`] = `
<a href="http://epic-spinners.epicmax.co/" target="_blank" class="va-button va-button--success va-button--default va-button--without-title va-button--normal">
  <div class="va-button__content">
    <!---->
    <!---->
    <!---->
  </div>
</a>
`;

exports[`VaButton a button snapshot 1`] = `
<a href="http://epic-spinners.epicmax.co/" target="_blank" class="va-button va-button--success va-button--default va-button--without-title va-button--normal">
  <div class="va-button__content">
    <!---->
    <!---->
    <!---->
  </div>
</a>
`;

exports[`VaButton both icon button snapshot 1`] = `
<button class="va-button va-button--success va-button--default va-button--without-title va-button--with-left-icon va-button--with-right-icon va-button--normal">
  <div class="va-button__content"><i class="va-button__content__icon va-button__content__icon-right brandico brandico-facebook"></i>
    <!----> <i class="va-button__content__icon va-button__content__icon-right iconicstroke iconicstroke-info"></i></div>
</button>
`;

exports[`VaButton danger button 2 1`] = `
<button class="va-button va-button--danger va-button--default va-button--without-title va-button--normal">
  <div class="va-button__content">
    <!---->
    <!---->
    <!---->
  </div>
</button>
`;

exports[`VaButton danger button snapshot 1`] = `
<button class="va-button va-button--danger va-button--default va-button--without-title va-button--normal">
  <div class="va-button__content">
    <!---->
    <!---->
    <!---->
  </div>
</button>
`;

exports[`VaButton disabled button 2 1`] = `
<button disabled="disabled" class="va-button va-button--success va-button--default va-button--disabled va-button--without-title va-button--normal">
  <div class="va-button__content">
    <!---->
    <!---->
    <!---->
  </div>
</button>
`;

exports[`VaButton disabled snapshot 1`] = `
<button disabled="disabled" class="va-button va-button--success va-button--default va-button--disabled va-button--without-title va-button--normal">
  <div class="va-button__content">
    <!---->
    <!---->
    <!---->
  </div>
</button>
`;

exports[`VaButton flat button 2 1`] = `
<button class="va-button va-button--success va-button--flat va-button--without-title va-button--normal">
  <div class="va-button__content">
    <!---->
    <!---->
    <!---->
  </div>
</button>
`;

exports[`VaButton flat button snapshot 1`] = `
<button class="va-button va-button--success va-button--flat va-button--without-title va-button--normal">
  <div class="va-button__content">
    <!---->
    <!---->
    <!---->
  </div>
</button>
`;

exports[`VaButton info button 2 1`] = `
<button class="va-button va-button--info va-button--default va-button--without-title va-button--normal">
  <div class="va-button__content">
    <!---->
    <!---->
    <!---->
  </div>
</button>
`;

exports[`VaButton info button snapshot 1`] = `
<button class="va-button va-button--info va-button--default va-button--without-title va-button--normal">
  <div class="va-button__content">
    <!---->
    <!---->
    <!---->
  </div>
</button>
`;

exports[`VaButton large button 2 1`] = `
<button class="va-button va-button--success va-button--default va-button--without-title va-button--large">
  <div class="va-button__content">
    <!---->
    <!---->
    <!---->
  </div>
</button>
`;

exports[`VaButton large button snapshot 1`] = `
<button class="va-button va-button--success va-button--default va-button--without-title va-button--large">
  <div class="va-button__content">
    <!---->
    <!---->
    <!---->
  </div>
</button>
`;

exports[`VaButton mixed icon 1`] = `
<button class="va-button va-button--success va-button--default va-button--without-title va-button--with-left-icon va-button--with-right-icon va-button--normal">
  <div class="va-button__content"><i class="va-button__content__icon va-button__content__icon-right brandico brandico-facebook"></i>
    <!----> <i class="va-button__content__icon va-button__content__icon-right iconicstroke iconicstroke-info"></i></div>
</button>
`;

exports[`VaButton outline button 2 1`] = `
<button class="va-button va-button--success va-button--outline va-button--without-title va-button--normal">
  <div class="va-button__content">
    <!---->
    <!---->
    <!---->
  </div>
</button>
`;

exports[`VaButton outline button snapshot 1`] = `
<button class="va-button va-button--success va-button--outline va-button--without-title va-button--normal">
  <div class="va-button__content">
    <!---->
    <!---->
    <!---->
  </div>
</button>
`;

exports[`VaButton router-link button snapshot 1`] = `
<router-link to="[object Object]" append="true" active-class="va-button--active" class="va-button va-button--success va-button--default va-button--without-title va-button--normal">
  <div class="va-button__content">
    <!---->
    <!---->
    <!---->
  </div>
</router-link>
`;

exports[`VaButton router-link snapshot 1`] = `
<router-link to="[object Object]" append="true" active-class="va-button--active" class="va-button va-button--success va-button--default va-button--without-title va-button--normal">
  <div class="va-button__content">
    <!---->
    <!---->
    <!---->
  </div>
</router-link>
`;

exports[`VaButton small button 2 1`] = `
<button class="va-button va-button--success va-button--default va-button--without-title va-button--small">
  <div class="va-button__content">
    <!---->
    <!---->
    <!---->
  </div>
</button>
`;

exports[`VaButton small button snapshot 1`] = `
<button class="va-button va-button--success va-button--default va-button--without-title va-button--small">
  <div class="va-button__content">
    <!---->
    <!---->
    <!---->
  </div>
</button>
`;

exports[`VaButton warning button 2 1`] = `
<button class="va-button va-button--warning va-button--default va-button--without-title va-button--normal">
  <div class="va-button__content">
    <!---->
    <!---->
    <!---->
  </div>
</button>
`;

exports[`VaButton warning button snapshot 1`] = `
<button class="va-button va-button--warning va-button--default va-button--without-title va-button--normal">
  <div class="va-button__content">
    <!---->
    <!---->
    <!---->
  </div>
</button>
`;
